--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -37,9 +37,9 @@
     <!-- Hero Section (이미지 상단 디자인 반영) -->
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
         <!-- 메인 페이지로 돌아가기 버튼 -->
-        <a href="ai_course_content.html"
+        <a href="index.html"
             class="absolute top-4 right-4 md:top-6 md:right-8 inline-flex items-center gap-2 px-4 py-2 bg-white/20 backdrop-blur-md text-white text-sm font-semibold rounded-full border border-white/30 hover:bg-white/30 transition-all z-20">
-            <i class="fas fa-arrow-left"></i>
+            <i class="fas fa-home"></i>
             <span class="hidden sm:inline">메인 페이지로</span>
         </a>
 
