--- a/day01_ai_concept.html
+++ b/day01_ai_concept.html
@@ -482,9 +482,10 @@
             <h3 class="text-2xl font-bold mb-4">강의 요약 및 다음 단계</h3>
             <p class="text-slate-600 mb-8">기술의 원리를 이해하는 것이 효과적인 프롬프팅의 시작입니다.</p>
             <div class="flex flex-wrap justify-center gap-4">
-                <a href="#concept"
-                    class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors">다시
-                    복습하기</a>
+                <button onclick="alert('교재 PDF 준비 중입니다.')"
+                    class="px-6 py-3 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors flex items-center gap-2">
+                    <i class="fas fa-file-download"></i> 교재 PDF 다운로드
+                </button>
                 <a href="day01_lecture.html"
                     class="px-6 py-3 bg-white text-indigo-600 border border-indigo-200 rounded-xl font-bold hover:bg-indigo-50 transition-colors">강의실로
                     돌아가기</a>
