--- a/classroom.html
+++ b/classroom.html
@@ -140,10 +140,16 @@
                                     </div>
                                     <ul class="space-y-3 text-gray-700">
                                         <li class="flex items-start gap-2"><i
-                                                class="fas fa-check-circle text-blue-600 mt-1"></i>AI 검색 vs 전통 검색의 차이
+                                                class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                                href="day01_ai_search.html"
+                                                class="hover:text-blue-600 hover:underline transition-colors">AI 검색 vs
+                                                전통 검색의 차이</a>
                                         </li>
                                         <li class="flex items-start gap-2"><i
-                                                class="fas fa-check-circle text-blue-600 mt-1"></i>Gemini 핵심 기능 및 활용법
+                                                class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                                href="day01_gemini.html"
+                                                class="hover:text-blue-600 hover:underline transition-colors">Gemini 핵심
+                                                기능 및 활용법</a>
                                         </li>
                                         <li class="flex items-start gap-2"><i
                                                 class="fas fa-check-circle text-blue-600 mt-1"></i>NotebookLM으로 문서 분석하기
