--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -242,7 +242,7 @@
                                         class="bg-slate-100 text-slate-600 px-3 py-1 rounded-md text-xs font-semibold">Keyword</span>
                                 </div>
                                 <div class="flex gap-2">
-                                    <a href="#"
+                                    <a href="day01_ai_search.html"
                                         class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                         <i class="fas fa-book-reader"></i> 강의 보기
                                     </a>
@@ -275,7 +275,7 @@
                                         class="bg-slate-100 text-slate-600 px-3 py-1 rounded-md text-xs font-semibold">Workspace</span>
                                 </div>
                                 <div class="flex gap-2">
-                                    <a href="#"
+                                    <a href="day01_gemini.html"
                                         class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                         <i class="fas fa-book-reader"></i> 강의 보기
                                     </a>
