feat: Complete all lecture sub-pages (Day 2-8), fix encoding issues, and update classroom title

--- a/classroom.html
+++ b/classroom.html
@@ -66,7 +66,7 @@
                         class="text-indigo-600 font-bold text-sm uppercase tracking-wider bg-indigo-50 px-3 py-1 rounded-full">My
                         Curriculum</span>
                     <h2 class="text-3xl md:text-4xl font-bold mt-4 text-gray-800">
-                        학습 커리큘럼
+                        나의 AI 강의실
                     </h2>
                     <p class="text-gray-600 mt-3">진도율에 맞춰 학습을 진행해 주세요</p>
                 </div>
@@ -152,10 +152,16 @@
                                                 기능 및 활용법</a>
                                         </li>
                                         <li class="flex items-start gap-2"><i
-                                                class="fas fa-check-circle text-blue-600 mt-1"></i>NotebookLM으로 문서 분석하기
+                                                class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                                href="day01_notebooklm.html"
+                                                class="hover:text-blue-600 hover:underline transition-colors">NotebookLM으로
+                                                문서 분석하기</a>
                                         </li>
                                         <li class="flex items-start gap-2"><i
-                                                class="fas fa-check-circle text-blue-600 mt-1"></i>출처 기반 리서치 방법론</li>
+                                                class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                                href="day01_research_method.html"
+                                                class="hover:text-blue-600 hover:underline transition-colors">출처 기반 리서치
+                                                방법론</a></li>
                                     </ul>
                                 </div>
                                 <div class="bg-emerald-50 rounded-2xl p-6">
@@ -214,15 +220,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>프롬프트 엔지니어링 원리</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day02_prompt_principles.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">프롬프트 엔지니어링
+                                            원리</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>ChatGPT vs Gemini vs
-                                        Claude 비교</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day02_llm_comparison.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">ChatGPT vs
+                                            Gemini vs Claude 비교</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>역할 부여 / Chain of Thought
-                                    </li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day02_role_cot.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">역할 부여 / Chain
+                                            of Thought</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>GPTs / Projects 활용법</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day02_gpts_projects.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">GPTs /
+                                            Projects 활용법</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -278,13 +294,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>AI 프레젠테이션 디자인 원칙</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day03_design_principles.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">AI 프레젠테이션 디자인
+                                            원칙</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Canva AI 기능 마스터</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day03_canva_ai.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Canva AI 기능
+                                            마스터</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Nano Banana 프롬프트 구조</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day03_nano_banana.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Nano Banana
+                                            프롬프트 구조</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>이미지 스타일 / 파라미터 이해</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day03_image_params.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">이미지 스타일 / 파라미터
+                                            이해</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -339,13 +367,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>AI 영상 생성 기술 개요</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day04_video_ai.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">AI 영상 생성 기술
+                                            개요</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Runway Gen-3 핵심 기능</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day04_runway_gen3.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Runway Gen-3
+                                            핵심 기능</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>AI 음성 합성 원리</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day04_audio_synthesis.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">AI 음성 합성
+                                            원리</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>보이스 클로닝 & 다국어 더빙</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day04_voice_cloning.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">보이스 클로닝 & 다국어
+                                            더빙</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -400,13 +440,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>노코드 자동화 플랫폼 개요</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day05_nocode_overview.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">노코드 자동화 플랫폼
+                                            개요</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Make vs Zapier 비교 분석</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day05_make_zapier.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Make vs Zapier
+                                            비교 분석</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>트리거와 액션의 이해</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day05_trigger_action.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">트리거와 액션의
+                                            이해</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>업무 프로세스 자동화 설계</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day05_automation_design.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">업무 프로세스 자동화
+                                            설계</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -463,14 +515,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>바이브 코딩이란? 핵심 개념</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day06_vibe_coding.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">바이브 코딩이란? 핵심
+                                            개념</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Cursor IDE 설치 및 환경 설정
-                                    </li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day06_cursor_setup.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Cursor IDE 설치
+                                            및 환경 설정</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>AI 페어 프로그래밍 워크플로우</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day06_pair_programming.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">AI 페어 프로그래밍
+                                            워크플로우</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>효과적인 코딩 프롬프트 작성법</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day06_coding_prompt.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">효과적인 코딩 프롬프트
+                                            작성법</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -526,13 +589,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>웹 애플리케이션 구조 이해</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day07_web_app_structure.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">웹 애플리케이션 구조
+                                            이해</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>프론트엔드 프레임워크 개요</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day07_framework_overview.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">프론트엔드 프레임워크
+                                            개요</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>API 연동 기초</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day07_api_integration.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">API 연동 기초</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>데이터베이스 연결 개념</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day07_database_connection.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">데이터베이스 연결
+                                            개념</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -587,13 +662,25 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>Git/GitHub 버전 관리 기초</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day08_git_github.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">Git/GitHub 버전
+                                            관리 기초</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>클라우드 배포 플랫폼 이해</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day08_cloud_deployment.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">클라우드 배포 플랫폼
+                                            이해</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>도메인 연결 및 HTTPS 설정</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day08_domain_https.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">도메인 연결 및 HTTPS
+                                            설정</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i>앱 유지보수 및 업데이트 전략</li>
+                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
+                                            href="day08_maintenance.html"
+                                            class="hover:text-blue-600 hover:underline transition-colors">앱 유지보수 및 업데이트
+                                            전략</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
