--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -83,7 +83,8 @@
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2 block">생성형 AI 개념과 작동원리</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">LLM, Transformer의 구조적 이해와 프롬프트 처리 방식의
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">LLM, Transformer의 구조를 이해하고 프롬프트 처리
+                                방식의
                                 메커니즘을 학습합니다.</p>
                             <div class="flex flex-wrap gap-2 mb-4">
                                 <span
@@ -108,7 +109,7 @@
                     </div>
                 </div>
 
-                <!-- 2. 업무 AI 활용 유의사항 -->
+                <!-- 2. 업무 AI 사용 유의사항 -->
                 <div
                     class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-amber-200 transition-all group">
                     <div class="flex items-start gap-4">
@@ -117,7 +118,7 @@
                             <i class="fas fa-exclamation-triangle text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">업무 AI 활용 시 유의사항</h3>
+                            <h3 class="text-xl font-bold mb-2">업무 AI 사용 시 유의사항</h3>
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">데이터 보안, 저작권 이슈 및 할루시네이션(환각 현상)에 대한
                                 실무적 대응 전략을 다룹니다.</p>
                             <div class="flex flex-wrap gap-2 mb-4">
@@ -187,7 +188,7 @@
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">AI 윤리와 책임 있는 사용</h3>
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">알고리즘 편향성 방지, 개인정보 보호 및 기업 고유의 AI 거버넌스
-                                수립 방안을 공유합니다.</p>
+                                확립 방안을 공유합니다.</p>
                             <div class="flex flex-wrap gap-2 mb-4">
                                 <span
                                     class="bg-slate-100 text-slate-600 px-3 py-1 rounded-md text-xs font-semibold">Ethics</span>
@@ -265,7 +266,7 @@
                             </div>
                             <div class="flex-1">
                                 <h3 class="text-xl font-bold mb-2">Gemini 핵심 기능 및 활용법</h3>
-                                <p class="text-slate-500 text-sm mb-4 leading-relaxed">Google Workspace와 연동되는 Gemini의
+                                <p class="text-slate-500 text-sm mb-4 leading-relaxed">Google Workspace와 연동하는 Gemini의
                                     강력한
                                     멀티모달 기능과 실무 적용 사례를 학습합니다.</p>
                                 <div class="flex flex-wrap gap-2 mb-4">
@@ -309,7 +310,7 @@
                                         Overview</span>
                                 </div>
                                 <div class="flex gap-2">
-                                    <a href="#"
+                                    <a href="day01_notebooklm.html"
                                         class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                         <i class="fas fa-book-reader"></i> 강의 보기
                                     </a>
@@ -343,7 +344,7 @@
                                         class="bg-slate-100 text-slate-600 px-3 py-1 rounded-md text-xs font-semibold">Sourcing</span>
                                 </div>
                                 <div class="flex gap-2">
-                                    <a href="#"
+                                    <a href="day01_research_method.html"
                                         class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                         <i class="fas fa-book-reader"></i> 강의 보기
                                     </a>
@@ -376,8 +377,9 @@
                                 <i class="fas fa-file-contract text-xl"></i>
                             </div>
                             <h3 class="text-xl font-bold mb-2">산업 동향 리서치 보고서</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">관심 산업 분야의 최신 트렌드를 AI로 조사하고, 경영진에게 보고할 수
-                                있는 형태의 세련된 보고서를 작성합니다.</p>
+                            <p class="text-slate-500 text-sm mb-6 flex-1">관심 산업 분야의 최신 트렌드를 AI로 조사하고, 경영진에게 보고할
+                                수
+                                있는 형태의 인텔리전스 보고서를 작성합니다.</p>
                             <a href="#"
                                 class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-emerald-600 hover:text-white transition-colors text-center">
                                 실습 시작하기
@@ -425,7 +427,7 @@
         </div>
     </main>
 
-    <!-- Footer: 제조혁신 길라잡이 김사부 브랜딩 -->
+    <!-- Footer: 제조혁신 전문가 김사부 브랜드 -->
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center gap-8">
             <div class="text-center md:text-left">
@@ -443,7 +445,7 @@
         </div>
         <div
             class="max-w-6xl mx-auto border-t border-slate-800 mt-8 pt-8 text-center text-slate-500 text-xs uppercase tracking-widest">
-            &copy; 2026 제조혁신 길라잡이 김사부 채널. All Rights Reserved.
+            &copy; 2026 제조혁신 전문가 김사부 채널. All Rights Reserved.
         </div>
     </footer>
 
