--- a/day04_lecture.html
+++ b/day04_lecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -21,13 +21,10 @@
         .gradient-bg {
             background: linear-gradient(135deg, #d97706 0%, #b45309 100%);
         }
-
-        /* Amber */
     </style>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
-
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
         <a href="classroom.html"
             class="absolute top-4 right-4 md:top-6 md:right-8 inline-flex items-center gap-2 px-4 py-2 bg-white/20 backdrop-blur-md text-white text-sm font-semibold rounded-full border border-white/30 hover:bg-white/30 transition-all z-20">
@@ -49,8 +46,6 @@
     </header>
 
     <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
-
-        <!-- PART 1. 이론 -->
         <section id="part1" class="space-y-6">
             <div
                 class="inline-flex items-center gap-3 bg-amber-600 text-white px-5 py-2 rounded-full shadow-lg shadow-amber-200">
@@ -69,10 +64,10 @@
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">AI 영상 생성 기술 개요</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Text-to-Video 기술의 현황과 원리를 이해하고 활용
-                                가능성을 탐색합니다.</p>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Text-to-Video 기술의 진화와 제작 프로세스 혁신을
+                                배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day04_video_ai.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -93,9 +88,9 @@
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">Runway Gen-3 핵심 기능</h3>
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">Motion Brush, Camera control 등
-                                Runway의 고급 기능을 사용하여 영상을 제어합니다.</p>
+                                Runway의 고급 제어 기능을 익힙니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day04_runway_gen3.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -115,10 +110,10 @@
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">AI 음성 합성 원리</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">텍스트를 자연스러운 음성으로 변환하는 TTS 모델의 작동 방식과
-                                튜닝법을 배웁니다.</p>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">텍스트를 감정이 담긴 음성으로 변환하는 TTS 모델의 작동 방식
+                                이해</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day04_audio_synthesis.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -138,10 +133,10 @@
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">보이스 클로닝 & 더빙</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">내 목소리를 복제하여 다양한 언어로 말하는 AI 내레이터를
-                                생성합니다.</p>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">내 목소리를 복제하여 다국어로 말하는 AI 내레이터를 생성합니다.
+                            </p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day04_voice_cloning.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -154,67 +149,62 @@
             </div>
         </section>
 
-        <!-- PART 2. 실습 -->
-        <div class="space-y-12">
-            <section id="part2-practice" class="space-y-6">
+        <section id="part2-practice" class="space-y-6">
+            <div
+                class="inline-flex items-center gap-3 bg-orange-600 text-white px-5 py-2 rounded-full shadow-lg shadow-orange-100">
+                <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
+                <h2 class="text-lg font-bold">크리에이터 워크숍</h2>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-6">
+                <!-- 1 -->
                 <div
-                    class="inline-flex items-center gap-3 bg-orange-600 text-white px-5 py-2 rounded-full shadow-lg shadow-orange-100">
-                    <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
-                    <h2 class="text-lg font-bold">크리에이티브 워크샵</h2>
-                </div>
-
-                <div class="grid md:grid-cols-3 gap-6">
-                    <!-- 1 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-video text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">제품 소개 영상</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">시나리오부터 영상 생성, 편집까지 AI만으로 30초 제품 광고 영상을 완성합니다.
-                            </p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-video text-xl"></i>
                         </div>
-                    </div>
-                    <!-- 2 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-microphone-alt text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">나레이션 음성 생성</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">감정과 톤앤매너를 조절하여 영상에 삽입할 전문 성우급 나레이션을 만듭니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
-                    </div>
-                    <!-- 3 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-images text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">이미지 → 영상 변환</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">정지된 제품 이미지나 로고를 움직이는 영상으로 생동감 있게 변환합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2">제품 소개 영상</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">시나리오부터 영상 생성, 편집까지 AI만으로 30초 제품 광고 영상을 완성합니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
                     </div>
                 </div>
-            </section>
-        </div>
+                <!-- 2 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-microphone-alt text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">내레이션 음성 생성</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">감정과 스타일을 조절하여 영상에 삽입할 전문 성우급 내레이션을 만듭니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-orange-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-orange-50 text-orange-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-orange-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-images text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">이미지 투 영상 변환</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">정적인 제품 이미지나 로고를 움직이는 영상으로 생동감 있게 변환합니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-orange-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto text-center md:text-left">
             <h4 class="text-2xl font-black mb-2 tracking-tighter italic">MASTER KIM AI CONSULTING</h4>
