--- a/day02_lecture.html
+++ b/day02_lecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -21,14 +21,10 @@
         .gradient-bg {
             background: linear-gradient(135deg, #059669 0%, #0f766e 100%);
         }
-
-        /* Emerald to Teal */
     </style>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
-
-    <!-- Hero Section -->
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
         <a href="classroom.html"
             class="absolute top-4 right-4 md:top-6 md:right-8 inline-flex items-center gap-2 px-4 py-2 bg-white/20 backdrop-blur-md text-white text-sm font-semibold rounded-full border border-white/30 hover:bg-white/30 transition-all z-20">
@@ -53,8 +49,6 @@
     </header>
 
     <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
-
-        <!-- PART 1. 이론 -->
         <section id="part1" class="space-y-6">
             <div
                 class="inline-flex items-center gap-3 bg-emerald-600 text-white px-5 py-2 rounded-full shadow-lg shadow-emerald-200">
@@ -76,7 +70,7 @@
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">AI가 이해하기 쉬운 지시문을 작성하는 핵심 원리와 구조를
                                 배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day02_prompt_principles.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -99,7 +93,7 @@
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">주요 LLM 모델별 장단점과 특징을 비교하여 상황별 최적의 도구를
                                 선택합니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day02_llm_comparison.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -120,9 +114,9 @@
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">역할 부여 / Chain of Thought</h3>
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">페르소나 설정과 CoT 기법을 통해 AI의 추론 능력을 극대화하는
-                                방법을 익힙니다.</p>
+                                방법을 습득합니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day02_role_cot.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -145,7 +139,7 @@
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">나만의 맞춤형 챗봇을 만들고 프로젝트 단위로 대화를 관리하는
                                 노하우를 공유합니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day02_gpts_projects.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -158,69 +152,65 @@
             </div>
         </section>
 
-        <!-- PART 2. 실습 -->
-        <div class="space-y-12">
-            <section id="part2-practice" class="space-y-6">
+        <section id="part2-practice" class="space-y-6">
+            <div
+                class="inline-flex items-center gap-3 bg-teal-600 text-white px-5 py-2 rounded-full shadow-lg shadow-teal-100">
+                <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
+                <h2 class="text-lg font-bold">프롬프트 작성 실습</h2>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-6">
+                <!-- 1 -->
                 <div
-                    class="inline-flex items-center gap-3 bg-teal-600 text-white px-5 py-2 rounded-full shadow-lg shadow-teal-100">
-                    <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
-                    <h2 class="text-lg font-bold">프롬프트 작성 실습</h2>
-                </div>
-
-                <div class="grid md:grid-cols-3 gap-6">
-                    <!-- 1 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-file-code text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">업무 자동화 템플릿</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">반복되는 이메일 작성, 회의록 요약 등을 위한 재사용 가능한 프롬프트 템플릿을
-                                만듭니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-file-code text-xl"></i>
                         </div>
-                    </div>
-                    <!-- 2 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-robot text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">나만의 커스텀 GPT</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">특정 목적(예: 코드 리뷰어, 영어 튜터)을 수행하는 나만의 AI 에이전트를
-                                구축합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
-                    </div>
-                    <!-- 3 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-chart-bar text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">Claude로 보고서 분석</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">Claude의 긴 컨텍스트 윈도우를 활용하여 방대한 양의 문서를 분석하고 인사이트를
-                                도출합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2">업무 자동화 템플릿</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">반복되는 이메일 작성, 회의록 요약 등을 위한 재사용 가능한 프롬프트 템플릿을 만듭니다.
+                        </p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
                     </div>
                 </div>
-            </section>
-        </div>
+                <!-- 2 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-robot text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">나만의 커스텀 GPT</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">특정 목적(예: 코드 리뷰어, 영어 튜터)을 수행하는 나만의 AI 에이전트를 구축합니다.
+                        </p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-teal-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-chart-bar text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Claude로 보고서 분석</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">Claude의 긴 컨텍스트 윈도우를 사용하여 방대한 양의 문서를 분석하고 인사이트를
+                            도출합니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto text-center md:text-left">
             <h4 class="text-2xl font-black mb-2 tracking-tighter italic">MASTER KIM AI CONSULTING</h4>
