--- a/day03_lecture.html
+++ b/day03_lecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -19,15 +19,12 @@
         }
 
         .gradient-bg {
-            background: linear-gradient(135deg, #7c3aed 0%, #5b21b6 100%);
+            background: linear-gradient(135deg, #7c3aed 0%, #6d28d9 100%);
         }
-
-        /* Violet */
     </style>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
-
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
         <a href="classroom.html"
             class="absolute top-4 right-4 md:top-6 md:right-8 inline-flex items-center gap-2 px-4 py-2 bg-white/20 backdrop-blur-md text-white text-sm font-semibold rounded-full border border-white/30 hover:bg-white/30 transition-all z-20">
@@ -37,21 +34,20 @@
             <div class="space-y-2">
                 <span class="text-6xl font-black opacity-20 block mb-[-10px]">03</span>
                 <h1 class="text-3xl md:text-5xl font-extrabold tracking-tight">AI 비주얼 콘텐츠</h1>
-                <p class="text-xl opacity-90 font-light">프레젠테이션과 이미지 제작</p>
+                <p class="text-xl opacity-90 font-light">시선을 사로잡는 이미지와 디자인</p>
             </div>
             <div class="mt-8 md:mt-0 flex gap-3">
                 <span
+                    class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Midjourney</span>
+                <span
                     class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Canva</span>
                 <span
-                    class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Nano
-                    Banana</span>
+                    class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Ideogram</span>
             </div>
         </div>
     </header>
 
     <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
-
-        <!-- PART 1. 이론 -->
         <section id="part1" class="space-y-6">
             <div
                 class="inline-flex items-center gap-3 bg-violet-600 text-white px-5 py-2 rounded-full shadow-lg shadow-violet-200">
@@ -73,7 +69,7 @@
                             <p class="text-slate-500 text-sm mb-4 leading-relaxed">청중을 사로잡는 시각 자료 구성 기법과 레이아웃 원칙을 학습합니다.
                             </p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day03_design_principles.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -89,14 +85,14 @@
                     <div class="flex items-start gap-4">
                         <div
                             class="bg-violet-50 text-violet-600 p-3 rounded-2xl group-hover:bg-violet-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-palette text-2xl"></i>
+                            <i class="fas fa-magic text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">Canva AI 기능 마스터</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Magic Design, Magic Edit 등 Canva의 AI
-                                도구를 활용해 디자인을 자동화합니다.</p>
+                            <h3 class="text-xl font-bold mb-2">Canva AI 매직 스튜디오</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Canva의 강력한 AI 기능을 활용하여 전문가 수준의 디자인을
+                                빠르게 만듭니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day03_canva_ai.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -112,14 +108,14 @@
                     <div class="flex items-start gap-4">
                         <div
                             class="bg-violet-50 text-violet-600 p-3 rounded-2xl group-hover:bg-violet-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-stream text-2xl"></i>
+                            <i class="fas fa-image text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">Nano Banana 프롬프트 구조</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">원하는 이미지를 정확하게 생성하기 위한 Nano Banana 및
-                                Midjourney 프롬프트 공식을 배웁니다.</p>
+                            <h3 class="text-xl font-bold mb-2">나노 바나나 프롬프트 구조</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">원하는 이미지를 정확하게 생성하기 위한 효과적인 프롬프트 작성
+                                공식을 배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day03_nano_banana.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -138,11 +134,11 @@
                             <i class="fas fa-sliders-h text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">이미지 스타일 / 파라미터</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">화풍, 조명, 구도 등 세부 파라미터를 조절하여 고품질 이미지를
-                                생성하는 법을 익힙니다.</p>
+                            <h3 class="text-xl font-bold mb-2">이미지 스타일 & 파라미터</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">--ar, --v 등 미드저니의 핵심 파라미터와 스타일 참조 기능을
+                                마스터합니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day03_image_params.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -155,66 +151,63 @@
             </div>
         </section>
 
-        <!-- PART 2. 실습 -->
-        <div class="space-y-12">
-            <section id="part2-practice" class="space-y-6">
+        <section id="part2-practice" class="space-y-6">
+            <div
+                class="inline-flex items-center gap-3 bg-fuchsia-600 text-white px-5 py-2 rounded-full shadow-lg shadow-fuchsia-100">
+                <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
+                <h2 class="text-lg font-bold">콘텐츠 제작 실습</h2>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-6">
+                <!-- 1 -->
                 <div
-                    class="inline-flex items-center gap-3 bg-purple-600 text-white px-5 py-2 rounded-full shadow-lg shadow-purple-100">
-                    <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
-                    <h2 class="text-lg font-bold">디자인 프로젝트</h2>
-                </div>
-
-                <div class="grid md:grid-cols-3 gap-6">
-                    <!-- 1 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-purple-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-purple-50 text-purple-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-purple-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-chart-pie text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">임원 보고용 PPT 제작</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">텍스트 원고를 바탕으로 구조화된 슬라이드를 자동 생성하고 디자인을 입힙니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-purple-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-fuchsia-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-fuchsia-50 text-fuchsia-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-fuchsia-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-desktop text-xl"></i>
                         </div>
-                    </div>
-                    <!-- 2 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-purple-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-purple-50 text-purple-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-purple-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-ad text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">브랜드 마케팅 이미지</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">시즌별 프로모션 배너와 광고 이미지를 AI로 빠르게 생성합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-purple-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
-                    </div>
-                    <!-- 3 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-purple-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-purple-50 text-purple-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-purple-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-photo-video text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">SNS 콘텐츠 패키지</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">인스타그램, 블로그 등에 사용할 카드 뉴스와 썸네일 세트를 제작합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-purple-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2">상세페이지 기획안</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">시선을 사로잡는 제품 상세페이지의 구조를 기획하고 AI로 카피와 이미지를 생성합니다.
+                        </p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
                     </div>
                 </div>
-            </section>
-        </div>
+                <!-- 2 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-fuchsia-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-fuchsia-50 text-fuchsia-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-fuchsia-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-icons text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">로고 & 브랜딩 디자인</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">브랜드 정체성을 담은 로고와 컬러 팔레트, 폰트 가이드를 만듭니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-fuchsia-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-fuchsia-50 text-fuchsia-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-fuchsia-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-hashtag text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">SNS 카드뉴스 제작</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">인스타그램, 블로그 등에 업로드할 정보성 카드뉴스를 효율적으로 제작합니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-fuchsia-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto text-center md:text-left">
             <h4 class="text-2xl font-black mb-2 tracking-tighter italic">MASTER KIM AI CONSULTING</h4>
