--- a/day08_lecture.html
+++ b/day08_lecture.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 
 <head>
@@ -19,15 +19,12 @@
         }
 
         .gradient-bg {
-            background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%);
+            background: linear-gradient(135deg, #be185d 0%, #9d174d 100%);
         }
-
-        /* Slate */
     </style>
 </head>
 
 <body class="bg-slate-50 text-slate-900">
-
     <header class="gradient-bg text-white py-12 px-8 relative overflow-hidden">
         <a href="classroom.html"
             class="absolute top-4 right-4 md:top-6 md:right-8 inline-flex items-center gap-2 px-4 py-2 bg-white/20 backdrop-blur-md text-white text-sm font-semibold rounded-full border border-white/30 hover:bg-white/30 transition-all z-20">
@@ -44,39 +41,39 @@
                     class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Vercel</span>
                 <span
                     class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">GitHub</span>
+                <span
+                    class="bg-white/20 backdrop-blur-md px-4 py-1.5 rounded-full text-sm font-semibold border border-white/30">Portfolio</span>
             </div>
         </div>
     </header>
 
     <main class="max-w-6xl mx-auto px-6 py-12 space-y-12">
-
-        <!-- PART 1. 이론 -->
         <section id="part1" class="space-y-6">
             <div
-                class="inline-flex items-center gap-3 bg-slate-600 text-white px-5 py-2 rounded-full shadow-lg shadow-slate-200">
+                class="inline-flex items-center gap-3 bg-pink-700 text-white px-5 py-2 rounded-full shadow-lg shadow-pink-200">
                 <span class="font-bold text-xs tracking-widest">PART 1 이론</span>
-                <h2 class="text-lg font-bold">배포와 운영</h2>
+                <h2 class="text-lg font-bold">배포 및 유지보수</h2>
             </div>
 
             <div class="grid md:grid-cols-2 gap-6">
                 <!-- 1 -->
                 <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-pink-200 transition-all group">
                     <div class="flex items-start gap-4">
                         <div
-                            class="bg-slate-50 text-slate-600 p-3 rounded-2xl group-hover:bg-slate-600 group-hover:text-white transition-colors">
+                            class="bg-pink-50 text-pink-600 p-3 rounded-2xl group-hover:bg-pink-600 group-hover:text-white transition-colors">
                             <i class="fab fa-git-alt text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">Git/GitHub 버전 관리</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">코드 변경 이력을 관리하고 협업을 가능하게 하는 Git의 핵심
-                                명령어를 익힙니다.</p>
+                            <h3 class="text-xl font-bold mb-2">Git/GitHub 버전 관리 기초</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">내 코드를 안전하게 저장하고 이력을 관리하는 Git의 핵심 기능을
+                                배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day08_git_github.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors"><i
+                                    class="inline-flex items-center gap-2 px-4 py-2 bg-pink-600 text-white text-sm font-bold rounded-lg hover:bg-pink-700 transition-colors"><i
                                         class="fas fa-play-circle"></i> 강의 듣기</a>
                             </div>
                         </div>
@@ -84,22 +81,22 @@
                 </div>
                 <!-- 2 -->
                 <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-pink-200 transition-all group">
                     <div class="flex items-start gap-4">
                         <div
-                            class="bg-slate-50 text-slate-600 p-3 rounded-2xl group-hover:bg-slate-600 group-hover:text-white transition-colors">
+                            class="bg-pink-50 text-pink-600 p-3 rounded-2xl group-hover:bg-pink-600 group-hover:text-white transition-colors">
                             <i class="fas fa-cloud-upload-alt text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">클라우드 배포 플랫폼</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">AWS, Vercel, Netlify 등 다양한 배포 환경을
-                                비교하고 최적의 플랫폼을 선택합니다.</p>
+                            <h3 class="text-xl font-bold mb-2">클라우드 배포 플랫폼 이해</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Vercel, Netlify 등 최신 클라우드 플랫폼을 활용한
+                                원클릭 배포를 실습합니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day08_cloud_deployment.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors"><i
+                                    class="inline-flex items-center gap-2 px-4 py-2 bg-pink-600 text-white text-sm font-bold rounded-lg hover:bg-pink-700 transition-colors"><i
                                         class="fas fa-play-circle"></i> 강의 듣기</a>
                             </div>
                         </div>
@@ -107,22 +104,22 @@
                 </div>
                 <!-- 3 -->
                 <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-pink-200 transition-all group">
                     <div class="flex items-start gap-4">
                         <div
-                            class="bg-slate-50 text-slate-600 p-3 rounded-2xl group-hover:bg-slate-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-lock text-2xl"></i>
+                            class="bg-pink-50 text-pink-600 p-3 rounded-2xl group-hover:bg-pink-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-globe text-2xl"></i>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">도메인 연결 및 HTTPS</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">나만의 도메인을 구입하여 연결하고 SSL 인증서를 적용하여 보안을
-                                강화합니다.</p>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">나만의 도메인(.com)을 구매하고 연결하여 프로페셔널한 서비스로
+                                만듭니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day08_domain_https.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors"><i
+                                    class="inline-flex items-center gap-2 px-4 py-2 bg-pink-600 text-white text-sm font-bold rounded-lg hover:bg-pink-700 transition-colors"><i
                                         class="fas fa-play-circle"></i> 강의 듣기</a>
                             </div>
                         </div>
@@ -130,22 +127,22 @@
                 </div>
                 <!-- 4 -->
                 <div
-                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-pink-200 transition-all group">
                     <div class="flex items-start gap-4">
                         <div
-                            class="bg-slate-50 text-slate-600 p-3 rounded-2xl group-hover:bg-slate-600 group-hover:text-white transition-colors">
-                            <i class="fas fa-wrench text-2xl"></i>
+                            class="bg-pink-50 text-pink-600 p-3 rounded-2xl group-hover:bg-pink-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-tools text-2xl"></i>
                         </div>
                         <div class="flex-1">
                             <h3 class="text-xl font-bold mb-2">앱 유지보수 전략</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">배포 후 발생하는 버그를 모니터링하고 기능을 지속적으로 업데이트하는
-                                운영 노하우를 배웁니다.</p>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">배포 후 모니터링, 버그 수정, 기능 업데이트 등 지속적인 서비스
+                                관리 방법을 배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="#"
+                                <a href="day08_maintenance.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
-                                    class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors"><i
+                                    class="inline-flex items-center gap-2 px-4 py-2 bg-pink-600 text-white text-sm font-bold rounded-lg hover:bg-pink-700 transition-colors"><i
                                         class="fas fa-play-circle"></i> 강의 듣기</a>
                             </div>
                         </div>
@@ -154,69 +151,63 @@
             </div>
         </section>
 
-        <!-- PART 2. 실습 -->
-        <div class="space-y-12">
-            <section id="part2-practice" class="space-y-6">
+        <section id="part2-practice" class="space-y-6">
+            <div
+                class="inline-flex items-center gap-3 bg-rose-600 text-white px-5 py-2 rounded-full shadow-lg shadow-rose-100">
+                <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
+                <h2 class="text-lg font-bold">파이널 프로젝트</h2>
+            </div>
+
+            <div class="grid md:grid-cols-3 gap-6">
+                <!-- 1 -->
                 <div
-                    class="inline-flex items-center gap-3 bg-slate-600 text-white px-5 py-2 rounded-full shadow-lg shadow-slate-100">
-                    <span class="font-bold text-xs tracking-widest">PART 2 실습</span>
-                    <h2 class="text-lg font-bold">파이널 프로젝트</h2>
-                </div>
-
-                <div class="grid md:grid-cols-3 gap-6">
-                    <!-- 1 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-slate-50 text-slate-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-slate-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-trophy text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">프로젝트 완성</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">지금까지 배운 모든 AI 기술을 활용하여 나만의 포트폴리오 프로젝트를 완성합니다.
-                            </p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-slate-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-rose-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-rose-50 text-rose-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-rose-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-tasks text-xl"></i>
                         </div>
-                    </div>
-                    <!-- 2 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-slate-50 text-slate-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-slate-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-rocket text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">Vercel로 앱 배포</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">완성된 웹 애플리케이션을 Vercel을 통해 전 세계 누구나 접속할 수 있도록
-                                배포합니다.</p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-slate-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
-                    </div>
-                    <!-- 3 -->
-                    <div
-                        class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-slate-200 transition-all group">
-                        <div class="flex flex-col h-full">
-                            <div
-                                class="w-12 h-12 bg-slate-50 text-slate-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-slate-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-microphone text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold mb-2">발표 및 수료</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">자신의 프로젝트를 동료들 앞에서 발표하고 피드백을 주고받으며 과정을 수료합니다.
-                            </p>
-                            <a href="#"
-                                class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-slate-600 hover:text-white transition-colors text-center">실습
-                                시작하기</a>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2">개인 프로젝트 완성</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">그동안 배운 모든 내용을 종합하여 나만의 웹 애플리케이션을 완성하고 다듬습니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-rose-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
                     </div>
                 </div>
-            </section>
-        </div>
+                <!-- 2 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-rose-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-rose-50 text-rose-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-rose-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-rocket text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Vercel로 배포하기</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">완성된 프로젝트를 Vercel을 통해 전 세계 누구나 접속 가능한 URL로 배포합니다.
+                        </p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-rose-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div
+                    class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-rose-200 transition-all group">
+                    <div class="flex flex-col h-full">
+                        <div
+                            class="w-12 h-12 bg-rose-50 text-rose-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-rose-600 group-hover:text-white transition-colors">
+                            <i class="fas fa-trophy text-xl"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">수료식 및 발표</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">프로젝트 결과물을 동료들과 공유하고 피드백을 주고받으며 과정을 마무합니다.</p>
+                        <a href="#"
+                            class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-rose-600 hover:text-white transition-colors text-center">실습
+                            시작하기</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer class="bg-slate-900 text-white py-16 px-6 mt-20">
         <div class="max-w-6xl mx-auto text-center md:text-left">
             <h4 class="text-2xl font-black mb-2 tracking-tighter italic">MASTER KIM AI CONSULTING</h4>
